more links to about, fix spacing of skills

--- a/src/components/colors.scss
+++ b/src/components/colors.scss
@@ -2,6 +2,7 @@ $light-grey: #f8f8f8;
 $grey: #DDD;
 $greyer: #999;
 $dark-grey: #666;
+$darker-grey: #444;
 $terminal: #222222;
 
 $green: #7BB94E;
